# router/handler/response.go
@@ -25,11 +25,31 @@ func sendSuccess(ctx *gin.Context, op string, data interface{}){
 }
 
 type ErrorResponse struct {
-	Message string `json: "message"`
-	ErroCode string `json: "errorCode"`
+	Message string `json:"message"`
+	ErroCode string `json:"errorCode"`
 }
 
 type CreateOpeningResponse struct {
-	Message string `json: "message"`
-	Data schemas.OpeningResponse `json: "data"`
+	Message string `json:"message"`
+	Data schemas.OpeningResponse `json:"data"`
+}
+
+type DeleteOpeningResponse struct {
+	Message string `json:"message"`
+	Data schemas.OpeningResponse `json:"data"`
+}
+
+type ShowOpeningResponse struct {
+	Message string `json:"message"`
+	Data schemas.OpeningResponse `json:"data"`
+}
+
+type UpdateOpeningResponse struct {
+	Message string `json:"message"`
+	Data schemas.OpeningResponse `json:"data"`
+}
+
+type ListOpeningResponse struct {
+	Message string `json:"message"`
+	Data []schemas.OpeningResponse `json:"data"`
 }
